Fixed a pesky alignment problem

--- a/assets/styles/component-styles/shared/pane-links.scss
+++ b/assets/styles/component-styles/shared/pane-links.scss
@@ -15,6 +15,7 @@ section.zuc-pane-links {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -34,6 +35,9 @@ section.zuc-pane-links {
 
   /* Styles for pane titles */
   .zuc-pane-title {
+    position: absolute;
+    right: -2px;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +59,7 @@ section.zuc-pane-links {
 
     @media #{$laptop-up} {
       height: 50%;
-      padding: 1vw 1.55vw;
+      padding: 1vw (31.76 / 19.2) * 1vw  1vw 1.55vw;
     }
 
     &.--lilac {
@@ -77,6 +81,19 @@ section.zuc-pane-links {
     &.--indigo {
       background: $color-zuc-indigo;
       color: $color-pure-white;
+    }
+
+    span {
+      font-weight: 500;
+      font-size: ( 12 / 3.2 ) * 1vw;
+
+      @media #{$tablet-only} {
+        font-size: ( 16 / 7.68 ) * 1vw; 
+      }
+
+      @media #{$laptop-up} {
+        font-size: ( 18 / 19.2 ) * 1vw;
+      }
     }
   }
 
